--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "BSD",
   "devDependencies": {
     "grunt": "~0.4.5",
-    "grunt-contrib-connect": "~0.8.0"
+    "grunt-contrib-connect": "~0.8.0",
+    "grunt-contrib-uglify": "~0.5.0"
   }
 }
